--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
     "bip39": "^3.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ethers": "^6.11.1",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.11.0"
   }
 }
